# CarPrediction

./: README.md
Modelos/: Modelo1.ipynb  Modelo2.ipynb  Modelo3.ipynb  Modelo4.ipynb
Proyectodjango/: db.sqlite3
Proyectodjango/Proyectodjango/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Proyectodjango/Proyectodjango/modelos/: modelo1.joblib  modelo2.joblib  modelo3.joblib  modelo4.joblib
Proyectodjango/Proyectodjango/templates/: formulario.html
TrabajoCoches/marcasCoches/: pyproject.toml
TrabajoCoches/marcasCoches/car/car/: text.txt
TrabajoCoches/marcasCoches/car/car/spiders/: car_scrap.py
TrabajoCoches/marcasCoches/notebooks/: allCar.ipynb  coches.ipynb  text.txt
TrabajoCoches/marcasCoches/tests/: test_marcascoches.py
