[tool.poetry]
name = "marcasCoches"
version = "0.1.0"
description = ""
authors = ["Adrian Avila <adrianavilatorres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.0"
pandas = "^1.4.1"
ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
